Fix for bug 164924: turn off the binhex stream converter on Mac, where we want to leave BinHex decoding to helper apps that can set file types etc. Also enable the AppleSingle decoder. r=sdagley/bryner, sr=darin.