mozilla/netwerk/build/nsNetModule.cpp
@@ -63,10 +63,21 @@
 
 #include "nsNetCID.h"
 
+#if defined(XP_MAC) || defined(XP_MACOSX)
+// Mac OS
+#define BUILD_APPLEFILE_DECODER 1
+#define BUILD_BINHEX_DECODER 0
+#else
+// other platforms
+#define BUILD_APPLEFILE_DECODER 0
+#define BUILD_BINHEX_DECODER 1
+#endif
+
 ///////////////////////////////////////////////////////////////////////////////
 
 #include "nsStreamConverterService.h"
-#if defined(XP_MAC)
+
+#if BUILD_APPLEFILE_DECODER
 #include "nsAppleFileDecoder.h"
 NS_GENERIC_FACTORY_CONSTRUCTOR(nsAppleFileDecoder)
 #endif
@@ -235,7 +246,7 @@ NS_GENERIC_FACTORY_CONSTRUCTOR(nsAboutCacheEntry)
 #include "nsUnknownDecoder.h"
 #include "nsTXTToHTMLConv.h"
 #include "nsIndexedToHTML.h"
-#ifndef XP_MAC
+#if BUILD_BINHEX_DECODER
 #include "nsBinHexDecoder.h"
 #endif
 
@@ -266,11 +277,11 @@ nsresult NS_NewStreamConv(nsStreamConverterService **aStreamConv);
 #define DEFLATE_TO_UNCOMPRESSED      "?from=deflate&to=uncompressed"
 #define PLAIN_TO_HTML                "?from=text/plain&to=text/html"
 
-#ifndef XP_MAC
+#if BUILD_BINHEX_DECODER
 #define BINHEX_TO_WILD               "?from=application/mac-binhex40&to=*/*"
 #endif
 
-#ifndef XP_MAC
+#if BUILD_BINHEX_DECODER
 static PRUint32 g_StreamConverterCount = 16;
 #else
 static PRUint32 g_StreamConverterCount = 15;
@@ -293,7 +304,7 @@ static const char *const g_StreamConverterArray[] = {
         COMPRESS_TO_UNCOMPRESSED,
         XCOMPRESS_TO_UNCOMPRESSED,
         DEFLATE_TO_UNCOMPRESSED,
-#ifndef XP_MAC
+#if BUILD_BINHEX_DECODER
         BINHEX_TO_WILD,
 #endif
         PLAIN_TO_HTML
@@ -348,7 +359,8 @@ UnregisterStreamConverters(nsIComponentManager *aCompMgr, nsIFile *aPath,
     }
     return rv;
 }
-#ifndef XP_MAC
+
+#if BUILD_BINHEX_DECODER
 NS_GENERIC_FACTORY_CONSTRUCTOR(nsBinHexDecoder);
 #endif
 
@@ -749,7 +761,7 @@ static const nsModuleComponentInfo gNetModuleInfo[] = {
       UnregisterStreamConverters  // unregisters *all* converters
     },
     
-#if defined(XP_MAC)
+#if BUILD_APPLEFILE_DECODER
     { NS_APPLEFILEDECODER_CLASSNAME, 
       NS_APPLEFILEDECODER_CID,
       NS_IAPPLEFILEDECODER_CONTRACTID, 
@@ -860,7 +872,7 @@ static const nsModuleComponentInfo gNetModuleInfo[] = {
       NS_ISTREAMCONVERTER_KEY PLAIN_TO_HTML,
       CreateNewNSTXTToHTMLConvFactory
     },
-#ifndef XP_MAC
+#if BUILD_BINHEX_DECODER
     { "nsBinHexConverter", NS_BINHEXDECODER_CID,
       NS_ISTREAMCONVERTER_KEY BINHEX_TO_WILD,
       nsBinHexDecoderConstructor
